Impléentation des tests pour les méthodes d'update status.